Navigation resize icon and wider touch area

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,9 +1,13 @@
 {% include head.html %}
 <section>
     <div class="wrapper">
+        <div id="resizable-navigation" class="navigation-control-placeholder float-left">
+            <div class="navigation">
+                {% include nav.html %}
 
-        <div id="resizable-navigation" class="navigation float-left">
-            {% include nav.html %}
+
+            </div>
+            <span class="navigation-control"></span>
         </div>
 
         <div class="content">
