--- a/_sass/_content.scss
+++ b/_sass/_content.scss
@@ -33,31 +33,51 @@
             background-color: $content-background-color;
             border: 1px solid $content-border-color;
             
+            .navigation-control-placeholder{
+                position: relative;
+                height: 100%;
+                width: $navigation-width;
+                .navigation-control{
+                    /*position: fixed;*/
+                    position: absolute;
+                    right: 0px;
+                    /*left: 292px;*/
+                    width: 16px;
+                    /*height: 40px;*/
+                    top: 50%;
+                    z-index: 1000000;
+                    &:after{
+                        font-family: "FontAwesome";
+                        content: "\f07e";
+                    }
+                    
+                }
+                /* override jquery UI default resize handle width */
+                .ui-resizable-e{
+                    width: 12px;
+                    right: 0;
+                }
+            }
+            
             .navigation, .content{              
                 display: block;
             }
             .navigation{
-                width: $navigation-width;
-                background-color: $navigation-background;
                 
+                width: calc(100% - 8px);    
                 /* 1px fix for border movement */
                 height: calc(100% - 1px);
                 overflow-y: auto;
                 overflow-x: hidden;
                 position: relative;
                 
-                .navigation-control{
-                    position: absolute;
-                    right: 0px;
-                    width: 10px;
-                    height: 40px;
-                    top: 50%;
-                    z-index: 1000000;
-                }
-                
                 nav{
                     border-right: $navigation-border-right solid $content-border-color;
                     min-height: 100%;
+                    background-color: $navigation-background;
+                    /* test */
+                    /*width: calc(100% - 8px);*/
+                    
                 }
                 
                 ul, li{
