--- a/_sass/_content.scss
+++ b/_sass/_content.scss
@@ -33,146 +33,8 @@
             background-color: $content-background-color;
             border: 1px solid $content-border-color;
             
-            .navigation-control-placeholder{
-                position: relative;
-                height: 100%;
-                width: $navigation-width;
-                .navigation-control{
-                    /*position: fixed;*/
-                    position: absolute;
-                    /*left: 292px;*/
-                    width: 16px;
-                    /*height: 40px;*/
-                    top: 50%;
-                    /*z-index: 1000000;*/
-                    
-                    /*click through fix*/
-                    /*right: 0px;*/
-                    right: 17px;
-                    height: 0px;
-                    width: 0px;
-                    z-index: 1;
-                    &:after{
-                        font-family: "FontAwesome";
-                        content: "\f07e";
-                        /*cursor: e-resize;*/
-                    }
-                    
-                }
-                /* override jquery UI default resize handle width */
-                .ui-resizable-e{
-                    width: 12px;
-                    right: 0;
-                }
-            }
+            @import "navigation";
             
-            .navigation, .content{              
-                display: block;
-            }
-            .navigation{
-                
-                width: calc(100% - 8px);    
-                /* 1px fix for border movement */
-                height: calc(100% - 1px);
-                overflow-y: auto;
-                overflow-x: hidden;
-                position: relative;
-                
-                nav{
-                    border-right: $navigation-border-right solid $content-border-color;
-                    min-height: 100%;
-                    background-color: $navigation-background;
-                    /* test */
-                    /*width: calc(100% - 8px);*/
-                    
-                }
-                
-                ul, li{
-                    list-style-type: none;
-                    padding: 0;
-                    margin: 0;
-                }
-                li{  
-                    /* FF has problems with line-height and element size being same 
-                    overcome by taking borders into account*/
-                    min-height: calc(#{$navigation-element-height} + 2px);
-                    line-height: $navigation-element-height;
-                    padding-left: $navigation-level-padding;
-                    
-                    a{
-                        color: $default-text-color;
-                        display: inline-block;                      
-                        width: calc(100% - (#{$navigation-level-padding}));
-                        
-                        &:hover{
-                            background-color: $silver;
-                        }
-                    }
-                    
-                    &.active{
-                        > a{
-                            font-weight: bold;
-                        }
-                    }
-                    
-                    &:last-child{
-                        border-bottom: none;
-                    }
-                    
-                    /* Different levels*/
-                    ul li{
-                        padding-left: $navigation-level-padding;
-                        /*a{
-                            width: calc(100% - (#{$navigation-level-padding} * 2));
-                        }*/
-                        
-                        /*a:not(.navigation-icon + a)*/
-                        a:only-child{
-                            padding-left: $navigation-level-padding;
-                        }
-                    }
-                    
-                    ul li ul li{
-                        padding-left: $navigation-level-padding;
-                        /*a{
-                            margin-left: $navigation-level-padding;
-                            width: calc(100% - #{$navigation-level-padding});
-                        }*/
-                    }
-                }
-                /* Navigation icon and visibility handling */
-                .navigation-closed, .navigation-open{
-                    span{
-                        cursor: pointer;
-                        width: $navigation-level-padding;
-                        text-align: center;
-                        &:after{
-                            font-family: "FontAwesome";
-                        }
-                    }
-                }
-                .navigation-closed{
-                    > span{
-                        &:after{
-                            content: "\f0da";
-                        }
-                    }
-                    > ul{
-                        display: none;
-                    }
-                }
-                .navigation-open{
-                    > span{
-                        &:after{
-                            content: "\f0d7";
-                        }
-                    }
-                }
-                .navigation-icon-placeholder{
-                    width: $navigation-level-padding;
-                    height: $navigation-element-height;
-                }
-            }
             .title{
                 border-bottom: 1px solid $content-border-color;
                 padding-bottom: $title-padding;
@@ -191,41 +53,7 @@
               display: block;
             }
             
-            /* Search styling */
-            .search-results{  
-                padding: 0px;
-                .search-result{
-                    list-style: none;
-                    padding: 0px 20px;
-                    /*text-overflow: ellipsis;*/
-
-                    /*Testing*/
-                    p{
-                        $lines-to-show: 2;
-
-                        /* http://codepen.io/martinwolf/pen/qlFdp */
-                        display: block; /* Fallback for non-webkit */
-                        display: -webkit-box;
-                        /*max-width: 400px;*/
-                        /* max-width: calc(100% - 50px);*/
-                        /*height: $font-size*$line-height*$lines-to-show;*/ /* Fallback for non-webkit */
-                        /* replace by a function like above */
-                        height: 44px;
-
-                        /*margin: 0 auto;*/
-                        /*font-size: $font-size;
-                        line-height: $line-height;*/
-                        -webkit-line-clamp: $lines-to-show;
-                        -webkit-box-orient: vertical;
-                        overflow: hidden;
-                        text-overflow: ellipsis;
-                    }
-                }
-            }
-            /* hide search result count from lunr */
-            .search-results-count{
-                display: none;
-            }
+            @import "search";
         }
     }
     
