--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,11 +1,9 @@
-<!--{% assign current = page.url | downcase | split: '/' %}-->
 {% assign current = page.url | split: '/' %}
 <nav>
   <ul>
 
     {% for nav in site.data.nav %}
 
-        <!--{% assign navHref = nav.href | downcase %}-->
         {% assign navHref = nav.href %}
 
         {% if nav.subcategories != null %}
@@ -19,20 +17,14 @@
             {% for subcategory in nav.subcategories %}
                 {% if current[3] contains '.' %}
                     {% capture currentSub %}{{current[1]}}/{{current[2]}}{% endcapture %}
-                {% endif %}
-                {% if currentSub == subcategory.subhref %}
+                {% endif %}               
                     {% if subcategory.subcategories != null %}
-                    <li class="navigation-open active">
+                    <li class="{% if currentSub == subcategory.subhref %} navigation-open active {% else %} navigation-closed {% endif %} ">
                         <span class="navigation-icon float-left"></span><a href="{{ site.baseurl }}/{{ site.url }}{{ subcategory.subhref }}">{{ subcategory.subtitle }}</a>
                         <ul>
                         {% for subsubcategory in subcategory.subcategories %}
-                            {% capture currentSubSub %}{{current[1]}}/{{current[2]}}/{{current[3]}}{% endcapture %}
-                            
-                            {% if currentSubSub == subsubcategory.subhref %}
-                            <li class="active">
-                            {% else %}    
-                            <li>
-                            {% endif %}
+                            {% capture currentSubSub %}{{current[1]}}/{{current[2]}}/{{current[3]}}{% endcapture %}                            
+                            <li {% if currentSubSub == subsubcategory.subhref %} class="active" {% endif %} >                           
                                 <a href="{{ site.baseurl }}/{{ site.url }}{{ subsubcategory.subhref }}">{{ subsubcategory.subtitle }}</a>
                             </li>
                         {% endfor %}
@@ -41,47 +33,17 @@
                     {% else %}
                     <li class="active">
                         <a href="{{ site.baseurl }}/{{ site.url }}{{ subcategory.subhref }}">{{ subcategory.subtitle }}</a>
-                    {% endif %}
-                {% else %}    
-                    {% if subcategory.subcategories != null %}
-                        <li class="navigation-closed">
-                            <span class="navigation-icon float-left"></span><a href="{{ site.baseurl }}/{{ site.url }}{{ subcategory.subhref }}">{{ subcategory.subtitle }}</a>
-                            <ul>
-                            {% for subsubcategory in subcategory.subcategories %}
-                                {% capture currentSubSub %}{{current[1]}}/{{current[2]}}/{{current[3]}}{% endcapture %}
-                                
-                                {% if currentSubSub == subsubcategory.subhref %}
-                                <li class="active">
-                                {% else %}    
-                                <li>
-                                {% endif %}
-                                    <a href="{{ site.baseurl }}/{{ site.url }}{{ subsubcategory.subhref }}">{{ subsubcategory.subtitle }}</a>
-                                </li>
-                            {% endfor %}
-                            </ul>
-                        </li>
-                    {% else %}
-                        <li>
-                            <a href="{{ site.baseurl }}/{{ site.url }}{{ subcategory.subhref }}">{{ subcategory.subtitle }}</a>
-                    {% endif %}
-                {% endif %}
-
+                    {% endif %}                   
             </li>
             {% endfor %}
           </ul>
         </li>
 
-        {% elsif nav.title == page.title or navHref == current[1] %}
-        <li class="active">
-          <span class="navigation-icon-placeholder float-left"></span><a href="{{ site.baseurl }}/{{ site.url }}{{ nav.href }}">{{ nav.title }}</a>
-        </li>
-
         {% else %}
-        <li>
+        <li {% if nav.title == page.title or navHref == current[1] %} class="active" {% endif %}>
           <span class="navigation-icon-placeholder float-left"></span><a href="{{ site.baseurl }}/{{ site.url }}{{ nav.href }}">{{ nav.title }}</a>
         </li>
         {% endif %}
     {% endfor %}
   </ul>
 </nav>
-
