--- a/_sass/_constants.scss
+++ b/_sass/_constants.scss
@@ -16,6 +16,8 @@ $content-padding-left-right: 20px;
 $navigation-element-height: 34px;
 $navigation-border-right: 1px;
 $navigation-level-padding: 14px;
+$navigation-2nd-lvl-font-size: 14px;
+$navigation-3rd-lvl-font-size: 12px;
 
 /* section element margin-bottom, and ul padding-left */
 $default-content-spacing: 20px;
