Remove search accuracy border, allow site to work at 400px width

--- a/_sass/_colors.scss
+++ b/_sass/_colors.scss
@@ -15,5 +15,5 @@ $content-background-color: $white;
 $content-border-color: $light-grey;
 $link-blue: #4DB3CC;
 $testdroidcom-grey: #535353;
-$search-text: #888888;
+$search-text: $white;
 $navigation-background: #f8f8f8;
