--- a/_sass/_search.scss
+++ b/_sass/_search.scss
@@ -2,7 +2,7 @@
         padding: 0px;
         .search-result{
             list-style: none;
-            padding: 0px 20px;
+            /*padding: 0px 20px;*/
             p{
                 $lines-to-show: 2;
 
@@ -17,8 +17,4 @@
                 text-overflow: ellipsis;
             }
         }
-    }
-    /* hide search result count from lunr */
-    .search-results-count{
-        display: none;
     }
