--- a/_sass/_navigation.scss
+++ b/_sass/_navigation.scss
@@ -16,7 +16,11 @@
                 font-family: "FontAwesome";
                 content: "\f07e";
             }
-
+        }
+        &:hover{
+            .navigation-control{
+                display: block !important;
+            }
         }
         /* override jquery UI default resize handle width */
         .ui-resizable-e{
