--- a/_sass/_constants.scss
+++ b/_sass/_constants.scss
@@ -1,7 +1,8 @@
 $body-min-width: 380px;
 
 $header-height: 38px;
-$site-search-width: 200px;
+$site-search-width: 250px;
+$site-search-width-sm: 150px;
 
 $footer-height: 38px;
 $footer-copyright-font-size: 12px;
