Remove navigation hover background. Update humans.txt. Created a developer-readme as a small guide to future developers

--- a/_sass/_navigation.scss
+++ b/_sass/_navigation.scss
@@ -67,7 +67,8 @@
                 width: calc(100% - (#{$navigation-level-padding}));
 
                 &:hover{
-                    background-color: $silver;
+                    /*background-color: $silver;*/
+                    font-weight: bold;
                 }
             }
 
