--- a/_includes/head.html
+++ b/_includes/head.html
@@ -7,7 +7,7 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <link rel="apple-touch-icon" href="apple-touch-icon.png">
+        <link rel="apple-touch-icon" href="{{ site.baseurl }}/apple-touch-icon.png">
         <!-- Place favicon.ico in the root directory -->
         <link rel='shortcut icon' type='image/x-icon' href='{{ site.baseurl }}/favicon.ico' />
 
