--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -15,7 +15,7 @@
             <span class="navigation-icon float-left"></span><a href="{{ site.baseurl }}/{{ site.url }}{{ nav.href }}">{{ nav.title }}</a>
           <ul>
             {% for subcategory in nav.subcategories %}
-                {% if current[3] contains '.' %}
+                {% if current[3] contains '.' or current[2] contains '.html'%}
                     {% capture currentSub %}{{current[1]}}/{{current[2]}}{% endcapture %}
                 {% endif %}               
                 {% if subcategory.subcategories != null %}
