Fix footer resizing with navigation, create new 404.page.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,6 +1,6 @@
 {% include head.html %}
 <section>
-    <div class="wrapper">
+    <div class="wrapper page-title-{{ page.title }}">
         <div id="resizable-navigation" class="navigation-control-placeholder float-left">
             <div class="navigation">
                 {% include nav.html %}
