--- a/_sass/_navigation.scss
+++ b/_sass/_navigation.scss
@@ -1,6 +1,6 @@
     .navigation-control-placeholder{
         position: relative;
-        height: 100%;
+        height: calc(100% - 1px);
         width: $navigation-width;
         .navigation-control{
             position: absolute;
