Api docs CSS improvements part 1

--- a/_sass/_content.scss
+++ b/_sass/_content.scss
@@ -1,4 +1,4 @@
-    section{
+    .content-section{
         h1, h2, h3, h4, h5, p, ul{
             margin-bottom: $default-content-spacing;
         }
