--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,5 +1,5 @@
 {% include head.html %}
-<section>
+<section class="content-section">
     <div class="wrapper page-title-{{ page.title }}">
         <div id="resizable-navigation" class="navigation-control-placeholder float-left">
             <div class="navigation">
