--- a/_includes/foot.html
+++ b/_includes/foot.html
@@ -1,7 +1,7 @@
         <footer>
             <div id="footer-wrapper">
                 <div id="bottom-box">
-                    <div class="float-left">
+                    <div class="float-left copyright-placeholder">
                         <p>Copyright &copy; <span id="copyright-year"></span>  Bitbar Technologies Ltd.  All rights reserved.</p>
                     </div>
                     <div class="float-right">
