--- a/_sass/_navigation.scss
+++ b/_sass/_navigation.scss
@@ -24,8 +24,10 @@
         }
         /* override jquery UI default resize handle width */
         .ui-resizable-e{
-            width: 12px;
-            right: 0;
+            /*width: 12px;
+            right: 0;*/
+            width: 20px;
+            right: -10px;
         }
     }
 
