site.baseurl -> site.github.url test

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -18,7 +18,7 @@
 	<!-- end minimal style -->
         
         <!-- custom Testdroid stylesheet -->
-        <link rel="stylesheet" href="{{ site.baseurl }}/stylesheets/testdroid.css">
+        <link rel="stylesheet" href="{{ site.github.url }}/stylesheets/testdroid.css">
         
         <!-- Font awesome icons, loaded from MaxCDN. Can be included locally into the project if needed/wanted -->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
