--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -12,7 +12,7 @@
             {% else %}   
         <li class="navigation-closed">
             {% endif %}
-            <span class="navigation-icon float-left"></span><a href="{{ site.baseurl }}/{{ site.url }}{{ nav.href }}">{{ nav.title }}</a>
+            <span class="navigation-icon float-left"></span><a href="{{ site.github.url }}/{{ site.url }}{{ nav.href }}">{{ nav.title }}</a>
           <ul>
             {% for subcategory in nav.subcategories %}
                 {% if current[3] contains '.' or current[2] contains '.html'%}
@@ -20,19 +20,19 @@
                 {% endif %}               
                 {% if subcategory.subcategories != null %}
                 <li class="{% if currentSub == subcategory.subhref %} navigation-open active {% else %} navigation-closed {% endif %} ">
-                    <span class="navigation-icon float-left"></span><a href="{{ site.baseurl }}/{{ site.url }}{{ subcategory.subhref }}">{{ subcategory.subtitle }}</a>
+                    <span class="navigation-icon float-left"></span><a href="{{ site.github.url }}/{{ site.url }}{{ subcategory.subhref }}">{{ subcategory.subtitle }}</a>
                     <ul>
                     {% for subsubcategory in subcategory.subcategories %}
                         {% capture currentSubSub %}{{current[1]}}/{{current[2]}}/{{current[3]}}{% endcapture %}
                         <li {% if currentSubSub == subsubcategory.subhref %} class="active" {% endif %} >                           
-                            <a href="{{ site.baseurl }}/{{ site.url }}{{ subsubcategory.subhref }}">{{ subsubcategory.subtitle }}</a>
+                            <a href="{{ site.github.url }}/{{ site.url }}{{ subsubcategory.subhref }}">{{ subsubcategory.subtitle }}</a>
                         </li>
                     {% endfor %}
                     </ul>
                 </li>
                 {% else %}
                 <li class="{% if currentSub == subcategory.subhref %} active {% endif %}" >
-                    <a href="{{ site.baseurl }}/{{ site.url }}{{ subcategory.subhref }}" > {{ subcategory.subtitle }}</a>
+                    <a href="{{ site.github.url }}/{{ site.url }}{{ subcategory.subhref }}" > {{ subcategory.subtitle }}</a>
                 {% endif %}                   
                 </li>
             {% endfor %}
@@ -41,7 +41,7 @@
 
         {% else %}
             <li {% if nav.title == page.title or navHref == current[1] %} class="active" {% endif %}>
-              <span class="navigation-icon-placeholder float-left"></span><a href="{{ site.baseurl }}/{{ site.url }}{{ nav.href }}">{{ nav.title }}</a>
+              <span class="navigation-icon-placeholder float-left"></span><a href="{{ site.github.url }}/{{ site.url }}{{ nav.href }}">{{ nav.title }}</a>
             </li>
         {% endif %}
     {% endfor %}
