--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,5 +1,5 @@
 {% include head.html %}
-<p id="baseUrl" style="display: none">{{ site.baseurl }}</p>
+<p id="baseUrl" style="display: none">{{ site.github.url }}</p>
 <section class="content-section">
     <div class="wrapper page-title-{{ page.title }}">
         <div id="resizable-navigation" class="navigation-control-placeholder float-left">
