--- a/_sass/_search.scss
+++ b/_sass/_search.scss
@@ -1,3 +1,13 @@
+	.search-message{
+		display: none;
+		border: 2px dashed $grey;
+		padding: 5px 10px;
+		margin-bottom: 10px;
+		*{
+			margin: 0;
+			padding: 0;
+		}
+	}
     .search-results{  
         padding: 0px;
         .search-result{
