--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,6 +16,7 @@
             {% include breadcrumbs.html %}
             <div id="toc"></div>
             {{ content }}
+            <div id="previousNextPage"></div>
         </div>
 
     </div>
