Add somekind of support until iPhone 4

--- a/_sass/_constants.scss
+++ b/_sass/_constants.scss
@@ -1,8 +1,9 @@
-$body-min-width: 360px;
+$body-min-width: 320px;
 
 $header-height: 38px;
 $site-search-width: 250px;
 $site-search-width-sm: 150px;
+$site-search-width-xsm: 130px;
 
 $footer-height: 38px;
 $footer-copyright-font-size: 12px;
