Change navigation resize indication color

--- a/_sass/_animations.scss
+++ b/_sass/_animations.scss
@@ -14,21 +14,21 @@
         transform: rotate(360deg);
     }
 }
-/*Animation color is $orange*/
+/*Animation color is $testdroidcom-blue*/
 @-webkit-keyframes border-pulsate {
-    0%   { border-color: rgba(248, 149, 29, 0); 
-			box-shadow: 5px 0 5px 0 rgba(248, 149, 29, 0);}
-    50%  { border-color: rgba(248, 149, 29, 1); 
-			box-shadow: 5px 0 5px 0 rgba(248, 149, 29, 1);}
-    100% { border-color: rgba(248, 149, 29, 0); 
-			box-shadow: 5px 0 5px 0 rgba(248, 149, 29, 0);}
+	0% 	 { border-color: rgba(77, 179, 204, 0); 
+			box-shadow: 5px 0 5px 0 rgba(77, 179, 204, 0);}
+    50%  { border-color: rgba(77, 179, 204, 1); 
+			box-shadow: 5px 0 5px 0 rgba(77, 179, 204, 1);}
+    100% { border-color: rgba(77, 179, 204, 0); 
+			box-shadow: 5px 0 5px 0 rgba(77, 179, 204, 0);}
 }
 
 @keyframes border-pulsate {
-    0%   { border-color: rgba(248, 149, 29, 0); 
-			box-shadow: 5px 0 5px 0 rgba(248, 149, 29, 0);}
-    50%  { border-color: rgba(248, 149, 29, 1); 
-			box-shadow: 5px 0 5px 0 rgba(248, 149, 29, 1);}
-    100% { border-color: rgba(248, 149, 29, 0); 
-			box-shadow: 5px 0 5px 0 rgba(248, 149, 29, 0);}
+	0% 	 { border-color: rgba(77, 179, 204, 0); 
+			box-shadow: 5px 0 5px 0 rgba(77, 179, 204, 0);}
+    50%  { border-color: rgba(77, 179, 204, 1); 
+			box-shadow: 5px 0 5px 0 rgba(77, 179, 204, 1);}
+    100% { border-color: rgba(77, 179, 204, 0); 
+			box-shadow: 5px 0 5px 0 rgba(77, 179, 204, 0);}
 }
