--- a/_sass/_colors.scss
+++ b/_sass/_colors.scss
@@ -18,3 +18,4 @@ $link-blue: #4DB3CC;
 $testdroidcom-grey: #535353;
 $search-text: $white;
 $navigation-background: #f8f8f8;
+$testdroidcom-blue: #4db3cc;
