Navigation default width reworked

--- a/_sass/_constants.scss
+++ b/_sass/_constants.scss
@@ -12,7 +12,7 @@ $section-padding-top-and-bottom: 0px;/*20px;*/
 $section-padding-left-and-right: 0px;/*40px;*/
 $wrapper-padding: 0px;/*20px;*/
 
-$navigation-width: 300px;
+/*$navigation-width: 300px;*/
 $content-padding-top-bottom: 10px;
 $content-padding-left-right: 20px;
 $content-max-width: 1000px;
