--- a/_sass/_navigation.scss
+++ b/_sass/_navigation.scss
@@ -1,7 +1,7 @@
     .navigation-control-placeholder{
         position: relative;
         height: calc(100% - 1px);
-        width: $navigation-width;
+        /*width: $navigation-width;*/
         .navigation-control{
             position: absolute;
             width: 16px;
