Debugging on gh-side

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -8,7 +8,8 @@
 
         {% if nav.subcategories != null %}
             {% if nav.title == page.title or navHref == current[1] %}
-        <li class="navigation-open {% if current[2] contains 'index.html' or current[2] == blank %} active {% endif %}">
+            {{current[2]}}
+        <li class="navigation-open {% if current[2] contains 'index.html' %} active {% endif %}">
             {% else %}   
         <li class="navigation-closed">
             {% endif %}
