--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,7 +5,6 @@
         <meta http-equiv="x-ua-compatible" content="ie=edge">
         <title></title>
         <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
 
         <link rel="apple-touch-icon" href="{{ site.github.url }}/apple-touch-icon.png">
         <!-- Place favicon.ico in the root directory -->
@@ -14,7 +13,7 @@
 	<!-- minimal style   TO BE REMOVED AS INTERFERES WITH OUR CUSTOM STYLES -->
 	<!--<link rel="stylesheet" href="{{ site.github.url }}/stylesheets/styles.css">--!
 	<!-- commented out, no such file <link rel="stylesheet" href="{{ site.github.url }}/stylesheets/pygment_trac.css">-->
-	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+	<meta name="viewport" content="width=960, initial-scale=1">
 	<!-- end minimal style -->
         
         <!-- custom Testdroid stylesheet -->
