testdroid.com -> bitbar.com

--- a/_includes/foot.html
+++ b/_includes/foot.html
@@ -20,7 +20,7 @@
                         <a href="https://plus.google.com/u/0/b/113497875167906810083/113497875167906810083/posts" target="_blank">
                             <i class="fa fa-google-plus-square"></i>
                         </a>
-                        <a href="http://testdroid.com/blog" target="_blank">
+                        <a href="http://bitbar.com/testing/blog/" target="_blank">
                             <i class="fa fa-comments"></i>
                         </a>
                         <a href="http://vimeo.com/channels/623497" target="_blank">
